test/Fail/Issue4525d.err
Issue4525d.agda:7.16-17: error: [VariableIsErased]
Variable A is declared erased, so it cannot be used here
when checking that the expression A has type Set
